# gomoku-harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: maarittely.md  viikkoraportti1.md  viikkoraportti2.md
src/: board.py  game.py  gui.py  index.py
